--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,9 +30,67 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <!-- 8 am -->
+      <div class="form-inline">
+        <!-- <label for ="time1" class="time-block hour">8am</label> -->
+        <p for = "time1" >8 am</p>
+        <textarea  id="time1" rows = "3"></textarea> 
+      </div>
+      <!-- 9 am -->
+      <div class="form-inline">
+        <p for = "time1" >8 am</p>
+        <textarea  id="time1" rows = "3"></textarea> 
+      </div>
+      <!-- 10 am -->
+      <div class="form-inline">
+        <p for = "time1" >8 am</p>
+        <textarea  id="time1" rows = "3"></textarea>  
+      </div>
+      <!-- 11 am -->
+      <div class="form-inline">
+        <p for = "time1" >8 am</p>
+        <textarea  id="time1" rows = "3"></textarea>  
+      </div>
+      <!-- 12 pm -->
+      <div class="form-inline">
+        <p for = "time1" >8 am</p>
+        <textarea  id="time1" rows = "3"></textarea> 
+      </div>
+      <!-- 1 pm -->
+      <div class="form-inline">
+        <p for = "time1" >8 am</p>
+        <textarea  id="time1" rows = "3"></textarea> 
+      </div>
+      <!-- 2 pm -->
+      <div class="form-inline">
+        <p for = "time1" >8 am</p>
+        <textarea  id="time1" rows = "3"></textarea> 
+      </div>
+      <!-- 3 pm -->
+      <div class="form-inline">
+        <p for = "time1" >8 am</p>
+        <textarea  id="time1" rows = "3"></textarea> 
+      </div>
+      <!-- 4 pm -->
+      <div class="form-inline">
+        <p for = "time1" >8 am</p>
+        <textarea  id="time1" rows = "3"></textarea> 
+      </div>
+      <!-- 5 pm -->
+      <div class="form-inline">
+        <p for = "time1" >8 am</p>
+        <textarea  id="time1" rows = "3"></textarea> 
+      </div>
+      <!-- 6 pm -->
+      <div class="form-inline">
+        <p for = "time1" >8 am</p>
+        <textarea  id="time1" rows = "3"></textarea> 
+      </div>
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/scripts.js"></script>
   </body>
 </html>
