--- a/index.html
+++ b/index.html
@@ -28,64 +28,111 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
-      <!-- 8 am -->
-      <div class="form-inline">
-        <!-- <label for ="time1" class="time-block hour">8am</label> -->
-        <p for = "time1" >8 am</p>
-        <textarea  id="time1" rows = "3"></textarea> 
+
+
+    <div class="input-group w-100 p-3 ">
+      <div class="input-group-prepend ">
+        <span class="input-group-text time-block">8 am</span>
       </div>
-      <!-- 9 am -->
-      <div class="form-inline">
-        <p for = "time1" >8 am</p>
-        <textarea  id="time1" rows = "3"></textarea> 
+      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
       </div>
-      <!-- 10 am -->
-      <div class="form-inline">
-        <p for = "time1" >8 am</p>
-        <textarea  id="time1" rows = "3"></textarea>  
+    </div>
+
+    <div class="input-group w-100 p-3 ">
+      <div class="input-group-prepend ">
+        <span class="input-group-text time-block">9 am</span>
       </div>
-      <!-- 11 am -->
-      <div class="form-inline">
-        <p for = "time1" >8 am</p>
-        <textarea  id="time1" rows = "3"></textarea>  
+      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
       </div>
-      <!-- 12 pm -->
-      <div class="form-inline">
-        <p for = "time1" >8 am</p>
-        <textarea  id="time1" rows = "3"></textarea> 
+    </div>
+
+    <div class="input-group w-100 p-3 ">
+      <div class="input-group-prepend ">
+        <span class="input-group-text time-block">10 am</span>
       </div>
-      <!-- 1 pm -->
-      <div class="form-inline">
-        <p for = "time1" >8 am</p>
-        <textarea  id="time1" rows = "3"></textarea> 
+      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
       </div>
-      <!-- 2 pm -->
-      <div class="form-inline">
-        <p for = "time1" >8 am</p>
-        <textarea  id="time1" rows = "3"></textarea> 
+    </div>
+
+    <div class="input-group w-100 p-3 ">
+      <div class="input-group-prepend ">
+        <span class="input-group-text time-block">11 am</span>
       </div>
-      <!-- 3 pm -->
-      <div class="form-inline">
-        <p for = "time1" >8 am</p>
-        <textarea  id="time1" rows = "3"></textarea> 
+      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
       </div>
-      <!-- 4 pm -->
-      <div class="form-inline">
-        <p for = "time1" >8 am</p>
-        <textarea  id="time1" rows = "3"></textarea> 
+    </div>
+
+    <div class="input-group w-100 p-3 ">
+      <div class="input-group-prepend ">
+        <span class="input-group-text time-block">12 pm</span>
       </div>
-      <!-- 5 pm -->
-      <div class="form-inline">
-        <p for = "time1" >8 am</p>
-        <textarea  id="time1" rows = "3"></textarea> 
+      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
       </div>
-      <!-- 6 pm -->
-      <div class="form-inline">
-        <p for = "time1" >8 am</p>
-        <textarea  id="time1" rows = "3"></textarea> 
+    </div>
+
+    <div class="input-group w-100 p-3 ">
+      <div class="input-group-prepend ">
+        <span class="input-group-text time-block">1 pm</span>
       </div>
+      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
+      </div>
+    </div>
+
+    <div class="input-group w-100 p-3 ">
+      <div class="input-group-prepend ">
+        <span class="input-group-text time-block">2 pm</span>
+      </div>
+      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
+      </div>
+    </div>
+
+    <div class="input-group w-100 p-3 ">
+      <div class="input-group-prepend ">
+        <span class="input-group-text time-block">3 pm</span>
+      </div>
+      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
+      </div>
+    </div>
+
+    <div class="input-group w-100 p-3 ">
+      <div class="input-group-prepend ">
+        <span class="input-group-text time-block">4 pm</span>
+      </div>
+      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
+      </div>
+    </div>
+
+    <div class="input-group w-100 p-3 ">
+      <div class="input-group-prepend ">
+        <span class="input-group-text time-block">5 pm</span>
+      </div>
+      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <div class="input-group-append">
+        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
+      </div>
+    </div>
+
+
+
+
 
     </div>
 
