added in moment.js for the times and working on the past present future colour coding

--- a/index.html
+++ b/index.html
@@ -30,103 +30,105 @@
     </header>
 
 
+
+
     <div class="input-group w-100 p-3 ">
-      <div class="input-group-prepend ">
-        <span class="input-group-text time-block">8 am</span>
+      <div class="input-group-prepend  ">
+        <span class="input-group-text time-block p-3" id = "label-8">8 am</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <textarea class="form-control present " aria-label="With textarea" rows="3"></textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block">9 am</span>
+        <span class="input-group-text time-block p-3" id = "label-9">9 am</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <textarea class="form-control present " aria-label="With textarea" rows="3"></textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block">10 am</span>
+        <span class="input-group-text time-block" id = "label-10">10 am</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <textarea class="form-control present " aria-label="With textarea" rows="3"></textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block">11 am</span>
+        <span class="input-group-text time-block" id = "label-11">11 am</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <textarea class="form-control present " aria-label="With textarea" rows="3" ></textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block">12 pm</span>
+        <span class="input-group-text time-block" id = "label-12">12 pm</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <textarea class="form-control present " aria-label="With textarea" rows="3"></textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block">1 pm</span>
+        <span class="input-group-text time-block p-3" id = "label-13">1 pm</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <textarea class="form-control present " aria-label="With textarea" rows="3"></textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block">2 pm</span>
+        <span class="input-group-text time-block p-3" id = "label-14">2 pm</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <textarea class="form-control present " aria-label="With textarea" rows="3"></textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block">3 pm</span>
+        <span class="input-group-text time-block p-3" id = "label-15">3 pm</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <textarea class="form-control present " aria-label="With textarea" rows="3"></textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block">4 pm</span>
+        <span class="input-group-text time-block p-3" id = "label-16">4 pm</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <textarea class="form-control present " aria-label="With textarea" rows="3"></textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block">5 pm</span>
+        <span class="input-group-text time-block p-3" id = "label-17">5 pm</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea"></textarea>
+      <textarea class="form-control present" aria-label="With textarea" rows="3"></textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Button</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
       </div>
     </div>
 
