--- a/index.html
+++ b/index.html
@@ -30,114 +30,107 @@
     </header>
 
 
-
-
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend  ">
-        <span class="input-group-text time-block p-3" id = "label-8">8 am</span>
+        <span class="input-group-text time-block p-3">8 am</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea" rows="3"></textarea>
+      <textarea class="form-control " aria-label="With textarea" rows="3" id = "text-8"> 0</textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button" id="save-8">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block p-3" id = "label-9">9 am</span>
+        <span class="input-group-text time-block p-3" >9 am</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea" rows="3"></textarea>
+      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-9"> 1</textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button" id="save-9">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block" id = "label-10">10 am</span>
+        <span class="input-group-text time-block">10 am</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea" rows="3"></textarea>
+      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-10"> 2</textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button" id="save-10">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block" id = "label-11">11 am</span>
+        <span class="input-group-text time-block">11 am</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea" rows="3" ></textarea>
+      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-11"> 3</textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button" id="save-11">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block" id = "label-12">12 pm</span>
+        <span class="input-group-text time-block">12 pm</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea" rows="3"></textarea>
+      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-12"> 4</textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button" id="save-12">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block p-3" id = "label-13">1 pm</span>
+        <span class="input-group-text time-block p-3">1 pm</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea" rows="3"></textarea>
+      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-13"> 5</textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button" id="save-13">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block p-3" id = "label-14">2 pm</span>
+        <span class="input-group-text time-block p-3" >2 pm</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea" rows="3"></textarea>
+      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-14"> 6</textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button" id="save-14">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block p-3" id = "label-15">3 pm</span>
+        <span class="input-group-text time-block p-3" >3 pm</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea" rows="3"></textarea>
+      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-15"> 7</textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button" id="save-15">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block p-3" id = "label-16">4 pm</span>
+        <span class="input-group-text time-block p-3">4 pm</span>
       </div>
-      <textarea class="form-control present " aria-label="With textarea" rows="3"></textarea>
+      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-16"> 8</textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button" id="save-16">Save</button>
       </div>
     </div>
 
     <div class="input-group w-100 p-3 ">
       <div class="input-group-prepend ">
-        <span class="input-group-text time-block p-3" id = "label-17">5 pm</span>
+        <span class="input-group-text time-block p-3">5 pm</span>
       </div>
-      <textarea class="form-control present" aria-label="With textarea" rows="3"></textarea>
+      <textarea class="form-control " aria-label="With textarea" rows="3" id = "text-17"> 9</textarea>
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary saveBtn" type="button">Save</button>
+        <button class="btn btn-outline-secondary saveBtn" type="button" id="save-17">Save</button>
       </div>
     </div>
 
-
-
-
-
     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/scripts.js"></script>
