made finale changes to javascript

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="input-group-prepend  ">
         <span class="input-group-text time-block p-3">8 am</span>
       </div>
-      <textarea class="form-control " aria-label="With textarea" rows="3" id = "text-8"> 0</textarea>
+      <textarea class="form-control " aria-label="With textarea" rows="3" id = "text-8"></textarea>
       <div class="input-group-append">
         <button class="btn btn-outline-secondary saveBtn" type="button" id="save-8">Save</button>
       </div>
@@ -44,7 +44,7 @@
       <div class="input-group-prepend ">
         <span class="input-group-text time-block p-3" >9 am</span>
       </div>
-      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-9"> 1</textarea>
+      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-9"></textarea>
       <div class="input-group-append">
         <button class="btn btn-outline-secondary saveBtn" type="button" id="save-9">Save</button>
       </div>
@@ -54,7 +54,7 @@
       <div class="input-group-prepend ">
         <span class="input-group-text time-block">10 am</span>
       </div>
-      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-10"> 2</textarea>
+      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-10"></textarea>
       <div class="input-group-append">
         <button class="btn btn-outline-secondary saveBtn" type="button" id="save-10">Save</button>
       </div>
@@ -64,7 +64,7 @@
       <div class="input-group-prepend ">
         <span class="input-group-text time-block">11 am</span>
       </div>
-      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-11"> 3</textarea>
+      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-11"></textarea>
       <div class="input-group-append">
         <button class="btn btn-outline-secondary saveBtn" type="button" id="save-11">Save</button>
       </div>
@@ -74,7 +74,7 @@
       <div class="input-group-prepend ">
         <span class="input-group-text time-block">12 pm</span>
       </div>
-      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-12"> 4</textarea>
+      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-12"></textarea>
       <div class="input-group-append">
         <button class="btn btn-outline-secondary saveBtn" type="button" id="save-12">Save</button>
       </div>
@@ -84,7 +84,7 @@
       <div class="input-group-prepend ">
         <span class="input-group-text time-block p-3">1 pm</span>
       </div>
-      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-13"> 5</textarea>
+      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-13"></textarea>
       <div class="input-group-append">
         <button class="btn btn-outline-secondary saveBtn" type="button" id="save-13">Save</button>
       </div>
@@ -94,7 +94,7 @@
       <div class="input-group-prepend ">
         <span class="input-group-text time-block p-3" >2 pm</span>
       </div>
-      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-14"> 6</textarea>
+      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-14"></textarea>
       <div class="input-group-append">
         <button class="btn btn-outline-secondary saveBtn" type="button" id="save-14">Save</button>
       </div>
@@ -104,7 +104,7 @@
       <div class="input-group-prepend ">
         <span class="input-group-text time-block p-3" >3 pm</span>
       </div>
-      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-15"> 7</textarea>
+      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-15"></textarea>
       <div class="input-group-append">
         <button class="btn btn-outline-secondary saveBtn" type="button" id="save-15">Save</button>
       </div>
@@ -114,7 +114,7 @@
       <div class="input-group-prepend ">
         <span class="input-group-text time-block p-3">4 pm</span>
       </div>
-      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-16"> 8</textarea>
+      <textarea class="form-control" aria-label="With textarea" rows="3" id = "text-16"></textarea>
       <div class="input-group-append">
         <button class="btn btn-outline-secondary saveBtn" type="button" id="save-16">Save</button>
       </div>
@@ -124,7 +124,7 @@
       <div class="input-group-prepend ">
         <span class="input-group-text time-block p-3">5 pm</span>
       </div>
-      <textarea class="form-control " aria-label="With textarea" rows="3" id = "text-17"> 9</textarea>
+      <textarea class="form-control " aria-label="With textarea" rows="3" id = "text-17"></textarea>
       <div class="input-group-append">
         <button class="btn btn-outline-secondary saveBtn" type="button" id="save-17">Save</button>
       </div>
